1.7.0/_sources/arcgis.learn.rst.txt
arcgis.learn module
====================

.. automodule:: arcgis.learn

detect_objects
--------------
.. automethod:: arcgis.learn.detect_objects

classify_objects
----------------
.. automethod:: arcgis.learn.classify_objects
    
classify_pixels
--------------
.. automethod:: arcgis.learn.classify_pixels


export_training_data
---------------
.. automethod:: arcgis.learn.export_training_data


list_models
---------------
.. automethod:: arcgis.learn.list_models


Model
------
.. autoclass:: arcgis.learn.Model
    :members:
    :undoc-members:

prepare_data
-----------
.. automethod:: arcgis.learn.prepare_data

SingleShotDetector
------------------
.. autoclass:: arcgis.learn.SingleShotDetector
    :members:
    :inherited-members:
    :undoc-members:

UnetClassifier
------------------
.. autoclass:: arcgis.learn.UnetClassifier
    :members:
    :inherited-members:
    :undoc-members:

FeatureClassifier
------------------
.. autoclass:: arcgis.learn.FeatureClassifier
    :members:
    :inherited-members:
    :undoc-members:

RetinaNet
------------------
.. autoclass:: arcgis.learn.RetinaNet
    :members:
    :inherited-members:
    :undoc-members:

EntityRecognizer
------------------
.. autoclass:: arcgis.learn.EntityRecognizer
    :members:
    :undoc-members:

PSPNetClassifier
------------------
.. autoclass:: arcgis.learn.PSPNetClassifier
    :members:
    :inherited-members:
    :undoc-members:

MaskRCNN
------------------
.. autoclass:: arcgis.learn.MaskRCNN
    :members:
    :inherited-members:
    :undoc-members: